--- a/locales/fr.json
+++ b/locales/fr.json
@@ -24,17 +24,38 @@
   "success": "Succès",
   "error_message": "Une erreur s'est produite.",
   "success_message": "Succès !",
-  
+  "Status": "Statut",
+  "Payment Method": "Méthode de paiement",
+  "Total Amount": "Montant total",
+  "PROCESSING": "EN COURS DE TRAITEMENT",
+  "COMPLETED": "COMPLÉTÉ",
+  "DELIVERED": "LIVRÉ",
+  "SHIPPED": "EXPÉDIÉ",
+  "Payment_On_Delivery": "PAIEMENT À LA LIVRAISON",
+  "Cancel Order": "Annuler la commande",
+  "Create New Product": "Créer un nouveau produit",
+  "View Orders": "Voir les commandes",
+  "My Products": "Mes produits",
+  "Account Settings": "Paramètres du compte",
+  "Plans & Upgrade": "Mise à niveau des plans",
+
+
+
+
+
   "terms_conditions": "Conditions générales",
   "about_us": "À propos de nous",
   "contact_us": "Contactez-nous",
   "Create_Seller_Account": "Créer un compte vendeur",
+  "Show More": "Afficher plus",
+  "Show Less": "Afficher moins",
   
   "all_rights_reserved": "Tous droits réservés",
   "become_a_seller": "Devenir vendeur",
 "account": "Compte",
   "catalog": "Catalogue",
-  
+  "Categories": "Catégories",
+  "All Products": "Tous Les Produits",
   "business_section": "Section d'affaires",
   "All Categories": "Catégories",
   "Lost Items": "Objets perdus",
@@ -52,6 +73,45 @@
   "sponsored": "Sponsorisé",
   "sign_in": "Se connecter",
   "sell_on": "Vendre sur (1M)",
-  "more": "Plus d'articles..."
+  "more": "Plus d'articles...",
+  "Product Catalog": "Catalogue de produits",
+  "Clothing": "Vêtements",
+  "Electronics": "Électronique",
+  "Jewelry": "Bijoux",
+  "Sport": "Sports",
+  "Home Appliances": "Appareils ménagers",
+  "Automobile": "Automobiles",
+  "Close": "Fermer",
+  "Products": "Produits",
+  "jobs": "Emplois",
+  "Job Seekers": "Chercheurs d'emploi",
+  "Last Updated": "Dernière mise à jour",
 
+  "Pet Supplies": "Fournitures pour animaux",
+  "Home & Living": "Maison et vie",
+  "Fashion": "Mode",
+  "Sports & Outdoors": "Sports et plein air",
+  "Books & Stationery": "Livres et papeterie",
+  "Automotive": "Automobile",
+  "Arts & Crafts": "Arts et artisanat",
+  "Your Conversations": "Vos conversations",
+  "Your Orders": "Vos commandes",
+  "Your Wishlist": "Votre liste de souhaits",
+  "Your Reviews": "Vos avis",
+  "Your Addresses": "Vos adresses",
+  "Your Payment Methods": "Vos méthodes de paiement",
+  "Your Notifications": "Vos notifications",
+  "Your Account Settings": "Paramètres de votre compte",
+  "Current Language": "Langue actuelle",
+  "switch_to_english": "Passer à l'anglais",
+  "switch_to_french": "Passer au français",
+  "You Have Placed An Order successfully": "Vous avez passé une commande avec succès",
+
+  "Your have placed": "Vous avez passé ",
+   "an": "une",
+   "order": "commande",
+   "Order ID": "ID de ..",
+
+  "view": "Voir",
+  "Clients Orders": "Commandes des clients"
 }
