latest language translations and minor UI fixes

--- a/locales/en.json
+++ b/locales/en.json
@@ -106,12 +106,127 @@
     "My Products": "My Products",
     "Account Settings": "Account Settings",
     "Plans & Upgrade": "Plans & Upgrade",
+     "signup": "Sign Up",
+     "select_product_type": "Select Product Type",
+  "enter_details_for": "Enter details for",
+  "select_category": "Select Category",
+  "max_6_images": "Maximum 5 images allowed",
+  "add_images": "Add Images",
+  "create_product": "Create Product",
+  "creating_product": "Creating Product...",
+  "Product Name": "Product Name",
+  "Price": "Price",
+  "Category": "Category",
+  "Stock": "Stock",
+  "Images": "Images",
+  "Missing Fields": "Missing Fields",
+  "Please fill in the following fields:": "Please fill in the following fields:",
+  "Return": "Return",
+  "Item": "Item",
+  "Vehicles": "Vehicles",
+  "Property": "Property",
+  "signin": "Sign In",
+  "personal": "Personal Details",
+  "full_name": "Full Name",
+  "email": "Email",
+  "address": "Address",
+  "city": "City",
+  "country": "Country",
+  "security_answer": "Security Answer",
+  "password": "Password",
+  "phone_number": "Phone Number",
+  "save_changes": "Save Changes",
+  "orders": "Orders",
+  "security": "Security",
+  "change_password": "Change Password",
+  "terms_and_conditions": "Terms and Conditions",
+  "signout": "Sign Out",
 
   "Last Updated": "Last updated",
   "Products": "Products",
   "jobs": "Jobs",
   "Job Seekers": "Job Seekers",
 
-  "Arts & Crafts": "Arts & Crafts"
+  "Arts & Crafts": "Arts & Crafts",
+
+  "Create a Job": "Create a Job",
+  "Search for a Job": "Search for a Job",
+  "Health": "Health",
+  "Mechanic": "Mechanic",
+  "Plumber": "Plumber",
+  "Constructions": "Constructions",
+  "Transportation": "Transportation",
+  "Beauty": "Beauty",
+  "Marketing": "Marketing",
+ 
+  "All": "All",
+
+  "Construction": "Construction",
+
+  "Education": "Education",
+  "Entertainment": "Entertainment",
+
+  "Home Services": "Home Services",
+  "Event Planning": "Event Planning",
+  "Finance": "Finance",
+  "Technology": "Technology",
+  "Legal": "Legal",
+  "Research": "Research",
+  "Retail": "Retail",
+
+  "Photography": "Photography",
+  "Graphic Design": "Graphic Design",
+  "Writing": "Writing",
+  "Translation": "Translation",
+  "Interior Design": "Interior Design",
+
+  "Nonprofit": "Nonprofit",
+  "Consulting": "Consulting",
+  "Management": "Management",
+  "Engineering": "Engineering",
+  "Accounting": "Accounting",
+  "Car rental services": "Car rental services",
+  
+  "Available Services": "Available Services",
+  "Create a Service": "Create a Service",
+  "Available Jobs": "Available Jobs",
+  "Search for Drugs, Pharmacies": "Search for Drugs, Pharmacies",
+  "Search In": "Search In",
+  "Select": "Select",
+  "Location": "Location",
+  "Properties": "Properties",
+  "Create Service": "Create Service",
+  "Register to continue ..": "Register to continue ..",
+  "Sign Up": "Sign Up",
+  "Select A Service Category": "Select A Service Category",
+  "Select a category": "Select a category",
+  "Name of Service": "Name of Service",
+  "Enter Your Category": "Enter Your Category",
+  "Property Title": "Property Title",
+  "Service Name": "Service Name",
+  "Enter Property Title": "Enter Property Title",
+  "Enter service name ": "Enter service name (e.g., Pharmacy, Car-Repairs)",
+  "City": "City",
+  "Select City": "Select City",
+  "Service Address": "Service Address",
+  "Enter Property Address": "Enter Property Address",
+  "Enter service (etug-ebe round-about)": "Enter service (etug-ebe round-about)",
+  "Email or Phone": "Email or Phone",
+  "Enter Property Contact e-mails/ phone": "Enter Property Contact e-mails/ phone",
+  "Enter service email/phone": "Enter service email/phone",
+  "Description": "Description",
+  "Enter Property description": "Enter Property description",
+  "Enter service description": "Enter service description",
+  "Maximum of 6 images": "Maximum of 6 images",
+  "Add Image": "Add Image",
+  "Create Property": "Create Property",
+  "Rent": "Rent",
+  "Sale": "Sale",
+  "View Details": "View Details",
+  "Contact Information": "Contact Information",
+  "Apply Now": "Apply Now",
+  "Rate: ${{rate}}/hr": "Rate: ${{rate}}/hr",
+  "Search jobs...": "Search jobs..."
+
 
 } 
