--- a/locales/fr.json
+++ b/locales/fr.json
@@ -3,9 +3,85 @@
   "farewell": "Au revoir",
   "thank_you": "Merci",
   "welcome": "Bienvenue",
-  "login": "Connexion",
-  "logout": "Déconnexion",
+    "select_product_type": "Sélectionnez le type de produit",
+  "enter_details_for": "Entrez les détails pour",
+  "select_category": "Sélectionnez une catégorie",
+  "max_6_images": "Maximum 5 images autorisées",
+  "add_images": "Ajouter des images",
+  "create_product": "Créer le produit",
+  "creating_product": "Création du produit...",
+  "Product Name": "Nom du produit",
+  "Price": "Prix",
+  "Description": "Description",
+  "Category": "Catégorie",
+  "Stock": "Stock",
+  "Images": "Images",
+  "Missing Fields": "Champs manquants",
+  "Please fill in the following fields:": "Veuillez remplir les champs suivants :",
+  "Sélectionnez une catégorie": "Sélectionnez une catégorie",
+  "Return": "Retour",
+  "Item": "Article",
+  "Vehicles": "Véhicules",
+  "Property": "Propriété",
+
+  "Create a Job": "Créer un emploi",
+  "Search for a Job": "Rechercher un emploi",
+  "Health": "Santé",
+  "Mechanic": "Mécanique",
+  "Plumber": "Plombier",
+  "Constructions": "Construction",
+  "Real Estate": "Immobilier",
+  "Transportation": "Transport",
+  "Beauty": "Beauté",
+  "Marketing": "Marketing",
+  "View Details": "Voir les détails",
+  "Apply Now": "Postuler maintenant",
+  "All": "Tous",
+  
+  "Construction": "Construction",
+  
+  "Education": "Éducation",
+  "Entertainment": "Divertissement",
+  
+  "Home Services": "Services à domicile",
+  "Event Planning": "Planification d'événements",
+  "Finance": "Finance",
+  "Technology": "Technologie",
+  "Legal": "Juridique",
+  "Research": "Recherche",
+  "Retail": "Vente au détail",
+
+  "Photography": "Photographie",
+  "Graphic Design": "Design graphique",
+  "Writing": "Écriture",
+  "Translation": "Traduction",
+  "Interior Design": "Design d'intérieur",
+  
+  "Nonprofit": "À but non lucratif",
+  "Consulting": "Consultation",
+  "Management": "Gestion",
+  "Engineering": "Ingénierie",
+  "Accounting": "Comptabilité",
+  "Car rental services": "Services de location de voitures",
+
   "register": "S'inscrire",
+  "signup": "S'inscrire",
+  "signin": "Se connecter",
+  "personal": "Détails personnels",
+  "full_name": "Nom complet",
+  "email": "E-mail",
+  "address": "Adresse",
+  "city": "Ville",
+  "country": "Pays",
+  "security_answer": "Réponse de sécurité",
+  "password": "Mot de passe",
+  "phone_number": "Numéro de téléphone",
+  "save_changes": "Enregistrer les modifications",
+  "orders": "Commandes",
+  "security": "Sécurité",
+  "change_password": "Changer le mot de passe",
+  "terms_and_conditions": "Conditions générales",
+  "signout": "Se déconnecter",
   "home": "Accueil",
   "Search_for_items": "Rechercher",
   "cart": "Panier",
@@ -38,6 +114,45 @@
   "My Products": "Mes produits",
   "Account Settings": "Paramètres du compte",
   "Plans & Upgrade": "Mise à niveau des plans",
+  "Available Services": "Services disponibles",
+  "Create a Service": "Créer un service",
+  "Available Jobs": "Emplois disponibles",
+  "Search for Drugs, Pharmacies": "Rechercher des médicaments, pharmacies",
+  "Search In": "Rechercher dans",
+  "Select": "Sélectionner",
+  "Location": "Lieu",
+  "Properties": "Propriétés",
+  "Create Service": "Créer un service",
+  "Register to continue ..": "Inscrivez-vous pour continuer ..",
+  "Sign Up": "S'inscrire",
+  "Select A Service Category": "Sélectionnez une catégorie de service",
+  "Select a category": "Sélectionnez une catégorie",
+  "Name of Service": "Nom du service",
+  "Enter Your Category": "Entrez votre catégorie",
+  "Property Title": "Titre de la propriété",
+  "Service Name": "Nom du service",
+  "Enter Property Title": "Entrez le titre de la propriété",
+  "Enter service name": "Entrez le nom du service (ex : Pharmacie, Réparations automobiles)",
+  "City": "Ville",
+  "Select City": "Sélectionnez une ville",
+  "Service Address": "Adresse du service",
+  "Enter Property Address": "Entrez l'adresse de la propriété",
+  "Enter service (etug-ebe round-about)": "Entrez le service (ex : etug-ebe rond-point)",
+  "Email or Phone": "Email ou téléphone",
+  "Enter Property Contact e-mails/ phone": "Entrez les e-mails/téléphones de contact de la propriété",
+  "Enter service email/phone": "Entrez l'email/téléphone du service",
+  "Enter Property description": "Entrez la description de la propriété",
+  "Enter service description": "Entrez la description du service",
+  "Maximum of 6 images": "Maximum de 6 images",
+  "Add Image": "Ajouter une image",
+  "Create Property": "Créer une propriété",
+  "Rent": "Location",
+  "Sale": "Vente",
+  "Contact Information": "Informations de contact",
+ 
+  "Rate: ${{rate}}/hr": "Taux : ${{rate}}/h",
+  "Search jobs...": "Rechercher des emplois...",
+
 
 
 
