latest with french translations

--- a/locales/en.json
+++ b/locales/en.json
@@ -226,7 +226,99 @@
   "Contact Information": "Contact Information",
   "Apply Now": "Apply Now",
   "Rate: ${{rate}}/hr": "Rate: ${{rate}}/hr",
-  "Search jobs...": "Search jobs..."
+  "Search jobs...": "Search jobs...",
+
+  
+  "Enter Product Name": "Enter Product Name",
+  "Enter Product Price": "Enter Product Price",
+  "Enter Product Description": "Enter Product Description",
+  "Enter Product Category": "Enter Product Category",
+  "Enter Product Stock": "Enter Product Stock",
+  "This will be visible to buyers": "This will be visible to buyers",
+  "Product Price": "Product Price",
+  "Product Description": "Product Description",
+  "Product Stock": "Product Stock",
+
+
+  "In stock": "In stock",
+  "Related Products": "Related Products",
+  "Add To Cart": "Add To Cart",
+  "Buy Now": "Buy Now",
+  "Chat with Seller": "Chat with Seller",
+  "Type your message": "Type your message",
+
+
+  
+  "First Name": "First Name",
+  "Middle Name": "Middle Name",
+  "Last Name": "Last Name",
+  "Your skills/Qualifications": "Your skills/Qualifications",
+  "Explain why someone should hire you": "Explain why someone should hire you",
+  "State your experience in the sector": "State your experience in the sector (e.g 5 Years)",
+  "Enter e-mail(Optional)": "Enter e-mail(Optional)",
+  "Enter Phone (+237 687876765)": "Enter Phone (+237 687876765)",
+  "Gender": "Gender",
+  "Male": "Male",
+  "Female": "Female",
+  "Other": "Other",
+  "Upload Documents": "Upload Documents",
+  "Upload your resume, CV, or other relevant documents (Max 5 images)": "Upload your resume, CV, or other relevant documents (Max 5 images)",
+  "Submit Application": "Submit Application",
+  "Job Title": "Job Title",
+  "Company Name": "Company Name",
+  "Salary": "Salary",
+  "Job Description": "Job Description",
+  "Upload Job Images": "Upload Job Images",
+  "Upload Images": "Upload Images",
+  "Create Job": "Create Job",
+  "All Jobs": "All Jobs",
+  "Search job titles and descriptions": "Search job titles and descriptions...",
+  "Search job types and descriptions": "Search job types and descriptions...",
+  "No results for": "No results for",
+  "Brief Description": "Brief Description",
+  "Why You Should Hire Me": "Why You Should Hire Me",
+  "Hire": "Hire",
+
+
+
+  
+  "Sign In": "Sign In",
+  "By": "By",
+  "Signing In...": "Signing In...",
+  "Signing Up...": "Signing Up...",
+  "Don't have an account? ": "Don't have an account? ",
+  "Already have an account? ": "Already have an account? ",
+  "Forgot Password?": "Forgot Password?",
+  "Back to Sign In": "Back to Sign In",
+  "Forgot Password": "Forgot Password",
+  "Enter your Phone number to reset your password": "Enter your Phone number to reset your password",
+  "Phone": "Phone",
+  "Enter your phone number": "Enter your phone number",
+  "Enter your phone number used to register": "Enter your phone number used to register",
+  "New Password": "New Password",
+  "Confirm Password": "Confirm Password",
+  "Password correct": "Password correct",
+  "Passwords do not match": "Passwords do not match",
+  "Reset Password": "Reset Password",
+  "Email": "Email",
+  "Email Address": "Email Address",
+  "Enter your email": "Enter your email",
+  "Enter your email address": "Enter your email address",
+  "example@example.com": "example@example.com",
+  "Phone Number": "Phone Number",
+  "Enter your phone": "Enter your phone",
+  "Full Name": "Full Name",
+  "Enter your full name": "Enter your full name",
+  "Password": "Password",
+  "Enter your password": "Enter your password",
+  "Create a password": "Create a password",
+  "Logging in, Please Wait!": "Logging in, Please Wait!",
+  "or": "or",
+  "signing in": "signing in",
+  "signing up": "signing up",
+  "you agree to our": "you agree to our",
+  "Terms and Conditions": "Terms and Conditions"
+
 
 
 } 
