--- a/locales/fr.json
+++ b/locales/fr.json
@@ -153,11 +153,98 @@
   "Rate: ${{rate}}/hr": "Taux : ${{rate}}/h",
   "Search jobs...": "Rechercher des emplois...",
 
+  "Enter Product Name": "Entrez le nom du produit",
+  "Enter Product Price": "Entrez le prix du produit",
+  "Enter Product Description": "Entrez la description du produit",
+  "Enter Product Category": "Entrez la catégorie du produit",
+  "Enter Product Stock": "Entrez le stock du produit",
+  "This will be visible to buyers": "Cela sera visible par les clients",
+  "Product Price": "Prix du produit",
+  "Product Description": "Description du produit",
+  "Product Stock": "Stock de produit",
+
+
+  
+
+  "First Name": "Prénom",
+  "Middle Name": "Deuxième prénom",
+  "Last Name": "Nom de famille",
+  "Your skills/Qualifications": "Vos compétences/qualifications",
+  "Explain why someone should hire you": "Expliquez pourquoi on devrait vous embaucher",
+  "State your experience in the sector": "Indiquez votre expérience dans le secteur (ex : 5 ans)",
+  "Enter e-mail(Optional)": "Entrez l'e-mail (optionnel)",
+  "Enter Phone (+237 687876765)": "Entrez le téléphone (+237 687876765)",
+  "Gender": "Genre",
+  "Male": "Homme",
+  "Female": "Femme",
+  "Other": "Autre",
+  "Upload your resume, CV, or other relevant documents (Max 5 images)": "Téléchargez votre CV ou d'autres documents pertinents (max 5 images)",
+  "Upload Documents": "Télécharger des documents",
+  "Submit Application": "Soumettre la candidature",
+  "Job Title": "Titre du poste",
+  "Company Name": "Nom de l'entreprise",
+  "Salary": "Salaire",
+  "Job Description": "Description du poste",
+  "Upload Job Images": "Télécharger des images du poste",
+  "Upload Images": "Télécharger des images",
+  "Create Job": "Créer un poste",
+  "All Jobs": "Tous les emplois",
+  "Search job titles and descriptions": "Rechercher des titres et descriptions de postes...",
+  "Search job types and descriptions": "Rechercher des types et descriptions de postes...",
+  "No results for": "Aucun résultat pour",
+  "Brief Description": "Brève description",
+  "Why You Should Hire Me": "Pourquoi vous devriez m'embaucher",
+  "Hire": "Embaucher",
+
+  "In stock": "En stock",
+ 
+  "Related Products": "Produits similaires",
+  "Add To Cart": "Ajouter au panier",
+  "Buy Now": "Acheter maintenant",
+  "Chat with Seller": "Discuter avec le vendeur",
+  "Type your message": "Tapez votre message",
+
+
+
+  "Sign In": "Se connecter",
+  "Signing In...": "Connexion...",
+  "Signing Up...": "Inscription...",
+  "Don't have an account? ": "Vous n'avez pas de compte ? ",
+  "Already have an account? ": "Vous avez déjà un compte ? ",
+  "Forgot Password?": "Mot de passe oublié ?",
+  "Back to Sign In": "Retour à la connexion",
+  "Forgot Password": "Mot de passe oublié",
+  "Enter your Phone number to reset your password": "Entrez votre numéro de téléphone pour réinitialiser votre mot de passe",
+  "Phone": "Téléphone",
+  "Enter your phone number": "Entrez votre numéro de téléphone",
+  "Enter your phone number used to register": "Entrez le numéro de téléphone utilisé lors de l'inscription",
+  "New Password": "Nouveau mot de passe",
+  "Confirm Password": "Confirmez le mot de passe",
+  "Password correct": "Mot de passe correct",
+  "Passwords do not match": "Les mots de passe ne correspondent pas",
+  "Reset Password": "Réinitialiser le mot de passe",
+  "Email": "Email",
+  "Email Address": "Adresse e-mail",
+  "Enter your email": "Entrez votre e-mail",
+  "Enter your email address": "Entrez votre adresse e-mail",
+  "example@example.com": "exemple@exemple.com",
+  "Phone Number": "Numéro de téléphone",
+  "Enter your phone": "Entrez votre téléphone",
+  "Full Name": "Nom complet",
+  "Enter your full name": "Entrez votre nom complet",
+  "Password": "Mot de passe",
+  "Enter your password": "Entrez votre mot de passe",
+  "Create a password": "Créez un mot de passe",
+  "Logging in, Please Wait!": "Connexion, veuillez patienter !",
+  "or": "ou",
+  
+  "you agree to our": "vous acceptez nos",
+  "Terms and Conditions": "Conditions générales",
 
 
 
 
-
+  "By": "En",
   "terms_conditions": "Conditions générales",
   "about_us": "À propos de nous",
   "contact_us": "Contactez-nous",
